# CMakeList.txt : CMake project for ConsoleMediaPlayer, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("ConsoleMediaPlayer")

# Add source to this project's executable.
add_executable (ConsoleMediaPlayer "ConsoleMediaPlayer.cpp" "ConsoleMediaPlayer.h")

# TODO: Add tests and install targets if needed.
